...
                        ]}
                      >
                        <ThemedText
                          type="smallBold"
                          style={styles.primaryButtonText}
                        >
                          Pay
                        </ThemedText>
                      </Pressable>

                      {/* <Pressable
                        onPress={() => {
                          if (selectors.getTotalCents() <= 0) {
...
